# pielectricseagles-usb-update-rpi

./: Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
config_sample/: updater.toml
pielectricseagles_usb_update/: all.html  fn.callback.html  fn.callback_usb_connected.html  fn.main.html  index.html  sidebar-items.js  struct.HotPlugHandler.html
pielectricseagles_usb_update/after_callback/: constant.PATH_OF_CONFIG.html  fn.found_match_vid_pid.html  fn.parse_mount_path.html  fn.parse_trusted_usb_devices.html  fn.return_usb_stick_mount_path.html  index.html  sidebar-items.js  struct.MountPath.html  struct.TrustedDevice.html
pielectricseagles_usb_update/install_updates_files/: fn.update_files.html  index.html  sidebar-items.js
pielectricseagles_usb_update/kill_task/: fn.check_task_is_running.html  index.html  sidebar-items.js
pielectricseagles_usb_update/mount_disk/: index.html
pielectricseagles_usb_update/post_update_marker/: enum.FileOutput.html  fn.is_been_updated.html  fn.post_update_marker.html  index.html  sidebar-items.js
pielectricseagles_usb_update/run_scripts/: fn.run_script.html  fn.run_scripts_after.html  fn.run_scripts_before.html  index.html  sidebar-items.js
pielectricseagles_usb_update/unpack_zip/: fn.unpack_zip.html  index.html  sidebar-items.js
src/: after_callback.rs  install_updates_files.rs  kill_task.rs  main.rs  mount_disk.rs  post_update_marker.rs  run_scripts.rs  unpack_zip.rs  update_json.rs  utils.rs  validate_update_files.rs
(+42 files in other folders)
